# Companhia-Voo-Seguro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  biblioteca.h  codecov.yml  linux.sh  main.cpp  setup.bat  setup.sh
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
src/: classes.hpp  main  main.cpp  templates.hpp  utils.hpp
test/: CMakeLists.txt  test_main.cpp
